stopgap for a blue buttons

--- a/css/components/btn-blue.css
+++ b/css/components/btn-blue.css
@@ -1,7 +1,8 @@
 .btn-blue{
     display: flex;
     margin-left: auto;
-    margin-right: 7.2%;
+    margin-right: 9vh;
+    justify-content: flex-end;
     
 }
 
